fix: Arruma estrutura do html para renderizar correto.

--- a/front-end/src/styles/register.module.css
+++ b/front-end/src/styles/register.module.css
@@ -1,4 +1,4 @@
-.loginPage {
+.registerPage {
   align-items: center;
   display: flex;
   font-size: 20px;
@@ -36,3 +36,4 @@
 .contentButtons :first-child {
   margin-top: 2rem;
 }
+
