--- a/front-end/src/styles/productCard.module.css
+++ b/front-end/src/styles/productCard.module.css
@@ -18,6 +18,7 @@
   width: 15rem;
 }
 
+
 .productCard img {
   height: 10rem;
 }
@@ -30,3 +31,6 @@
   justify-content: center;
 }
 
+.inputQuantity {
+  width: 1.4rem;
+}
