--- a/front-end/src/styles/orders.module.css
+++ b/front-end/src/styles/orders.module.css
@@ -20,7 +20,8 @@
   display: flex;
   gap: 1rem;
   margin: 0;
-  padding: 2rem;
+  padding: 3rem;
+  position: relative;
   width: 50rem;
 }
 
@@ -35,6 +36,34 @@
 
 .infos {
   display: flex;
-  gap: 10px;
+  gap: 2rem;
   margin: 0;
 }
+
+.status {
+  align-items: center;
+  border-radius: 10px;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  width: 15rem;
+}
+
+.datePrice {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0;
+}
+
+.address {
+  align-items: center;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  right: 5rem;
+  width: 30rem;
+}
+
