--- a/front-end/src/styles/orders.module.css
+++ b/front-end/src/styles/orders.module.css
@@ -3,10 +3,15 @@
   display: flex;
   flex-wrap: wrap;
   font-size: 2rem;
-  height: 100vh;
+  gap: 1rem;
   justify-content: center;
-  margin: 0;
   width: 100%;
+}
+
+.ordersPage__btn {
+  background-color: white;
+  border: none;
+  border-radius: 1rem;
 }
 
 .status, .date, .price, .address {
